@@ -110,9 +110,14 @@ class AlterTableAddColumns(AlterTableOperation):
 
     columns: dict[str, TableColumnTypeDescriptor]
 
-    def __init__(self, columns: dict[str, TableColumnTypeDescriptor]) -> None:
+    def __init__(
+        self, columns: dict[str, TableColumnTypeDescriptor | dict[str, Any]]
+    ) -> None:
         self._name = "add"
-        self.columns = columns
+        self.columns = {
+            col_n: TableColumnTypeDescriptor.coerce(col_v)
+            for col_n, col_v in columns.items()
+        }
 
     def __repr__(self) -> str:
         _col_desc = f"columns=[{','.join(sorted(self.columns.keys()))}]"
@@ -222,9 +227,19 @@ class AlterTableAddVectorize(AlterTableOperation):
 
     columns: dict[str, VectorServiceOptions]
 
-    def __init__(self, columns: dict[str, VectorServiceOptions]) -> None:
+    def __init__(
+        self, columns: dict[str, VectorServiceOptions | dict[str, Any]]
+    ) -> None:
         self._name = "addVectorize"
-        self.columns = columns
+        columns_ = {
+            col_n: VectorServiceOptions.coerce(col_v)
+            for col_n, col_v in columns.items()
+        }
+        if any(_col_svc is None for _col_svc in columns_.values()):
+            raise ValueError(
+                "Vector service definition cannot be None for AlterTableAddVectorize"
+            )
+        self.columns = cast(Dict[str, VectorServiceOptions], columns_)
 
     def __repr__(self) -> str:
         _cols_desc = [
@@ -258,7 +273,7 @@ class AlterTableAddVectorize(AlterTableOperation):
             )
         return AlterTableAddVectorize(
             columns=cast(
-                Dict[str, VectorServiceOptions],
+                Dict[str, VectorServiceOptions | dict[str, Any]],
                 _columns,
             )
         )
